# FFmpegDemo

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/wqllj/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: audio_convert.cpp  native-lib.cpp
app/src/main/cpp/include/ffmpeg/libavformat/: avformat.h
app/src/main/cpp/include/ffmpeg/libavutil/: opt.h
app/src/main/cpp/include/libavcodec/: dv_profile.h  dxva2.h  qsv.h
app/src/main/cpp/include/libavfilter/: asrc_abuffer.h
app/src/main/cpp/include/libavformat/: avformat.h  avio.h
app/src/main/cpp/include/libavutil/: common.h
app/src/main/cpp/include/libswresample/: swresample.h
app/src/main/java/com/example/wqllj/ffmpegdemo/: MainActivity.java  MediaPlayAPI.java  PlayService.java  VideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/wqllj/ffmpegdemo/: ExampleUnitTest.java
mediaplayer/: CMakeLists.txt  build.gradle
mediaplayer/src/main/: AndroidManifest.xml
mediaplayer/src/main/cpp/: audio_convert.cpp  native-lib.cpp  queue.cpp  queue.h
mediaplayer/src/main/cpp/include/libavcodec/: old_codec_ids.h  vda.h  vdpau.h
mediaplayer/src/main/cpp/include/libavfilter/: avfilter.h
mediaplayer/src/main/cpp/include/libavutil/: pixfmt.h
mediaplayer/src/main/cpp/include/libpostproc/: postprocess.h
mediaplayer/src/main/cpp/include/libswscale/: version.h
mediaplayer/src/main/java/com/example/mediaplayer/: MainActivity.java  MediaPlayAPI.java  PlayService.java  VideoView.java
mediaplayer/src/main/res/layout/: activity_main.xml
opensl_esdemo/: build.gradle
opensl_esdemo/src/androidTest/java/com/example/opensl_esdemo/: ExampleInstrumentedTest.java
opensl_esdemo/src/main/: AndroidManifest.xml
opensl_esdemo/src/main/java/com/example/opensl_esdemo/: MainActivity.java
opensl_esdemo/src/main/res/layout/: activity_main.xml
opensl_esdemo/src/main/res/values/: strings.xml
opensl_esdemo/src/test/java/com/example/opensl_esdemo/: ExampleUnitTest.java
